--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
       <artifactId>cucumber-core</artifactId>
       <version>7.14.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>3.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
